# TurtleBot-Package-Delivery-System

./: README.md
ss-25-secoro-assignments-team-2-main/assignment01/: task.md
ss-25-secoro-assignments-team-2-main/assignment01/submission_files/: instructions.txt
ss-25-secoro-assignments-team-2-main/assignment02/: task.md
ss-25-secoro-assignments-team-2-main/assignment02/submission_files/: README.md
ss-25-secoro-assignments-team-2-main/assignment02/submission_files/Copy of world_models_secoro_team_2/maps/: secoro_team_2.pgm  secoro_team_2.yaml
ss-25-secoro-assignments-team-2-main/assignment02/submission_files/Copy of world_models_secoro_team_2/tasks/: corridor_task.yaml  room_1_task.yaml  room_4_task.yaml  room_7_task.yaml
ss-25-secoro-assignments-team-2-main/assignment02/submission_files/create3_sim/: README.md
ss-25-secoro-assignments-team-2-main/assignment02/submission_files/create3_sim/irobot_create_common/irobot_create_common_bringup/: CHANGELOG.rst
ss-25-secoro-assignments-team-2-main/assignment02/submission_files/create3_sim/irobot_create_common/irobot_create_control/: package.xml
ss-25-secoro-assignments-team-2-main/assignment02/submission_files/create3_sim/irobot_create_gz/irobot_create_gz_plugins/: package.xml
ss-25-secoro-assignments-team-2-main/assignment02/submission_files/turtlebot4/turtlebot4_msgs/: CHANGELOG.rst
ss-25-secoro-assignments-team-2-main/assignment02/submission_files/turtlebot4/turtlebot4_navigation/: CHANGELOG.rst
ss-25-secoro-assignments-team-2-main/assignment02/submission_files/turtlebot4/turtlebot4_node/: CHANGELOG.rst  package.xml
ss-25-secoro-assignments-team-2-main/assignment02/submission_files/turtlebot4_simulator/: README.md
ss-25-secoro-assignments-team-2-main/assignment02/submission_files/turtlebot4_simulator/turtlebot4_gz_gui_plugins/: CMakeLists.txt
ss-25-secoro-assignments-team-2-main/assignment02/submission_files/turtlebot4_simulator/turtlebot4_gz_gui_plugins/Turtlebot4Hmi/: CMakeLists.txt  Turtlebot4Hmi.hh
ss-25-secoro-assignments-team-2-main/assignment02/submission_files/turtlebot4_simulator/turtlebot4_simulator/: CHANGELOG.rst  package.xml
ss-25-secoro-assignments-team-2-main/assignment03/: task.md
ss-25-secoro-assignments-team-2-main/assignment03/submission_files/: README.md
ss-25-secoro-assignments-team-2-main/assignment03/submission_files/robot_delivery_system_pkg/: README.md
ss-25-secoro-assignments-team-2-main/assignment03/submission_files/robot_delivery_system_pkg/delivery_interface/: setup.py
ss-25-secoro-assignments-team-2-main/assignment03/submission_files/secoro_team2_capella/secoro_team2/: .project  secoro_team2.afm  secoro_team2.aird  secoro_team2.capella
ss-25-secoro-assignments-team-2-main/assignment04/: task.md
ss-25-secoro-assignments-team-2-main/docker/: Dockerfile
ss-25-secoro-assignments-team-2-main/secoro_ws/: frames_2025-06-08_01.17.56.gv
ss-25-secoro-assignments-team-2-main/secoro_ws/src/: README.md
ss-25-secoro-assignments-team-2-main/secoro_ws/src/bt_ros2_demo/: CMakeLists.txt  README.md  package.xml
ss-25-secoro-assignments-team-2-main/secoro_ws/src/bt_ros2_demo/config/: tb4_demo.xml
ss-25-secoro-assignments-team-2-main/secoro_ws/src/bt_ros2_demo/include/bt_ros2_demo/: dock_action.hpp  dock_status.hpp  undock_action.hpp
ss-25-secoro-assignments-team-2-main/secoro_ws/src/bt_ros2_demo/src/: dock_action.cpp  dock_status.cpp  main.cpp  undock_action.cpp
ss-25-secoro-assignments-team-2-main/secoro_ws/src/create3_sim/: README.md
ss-25-secoro-assignments-team-2-main/secoro_ws/src/delivery_interface/: README.md  package.xml  setup.cfg  setup.py
ss-25-secoro-assignments-team-2-main/secoro_ws/src/delivery_interface/delivery_interface/: delivery_commander.py  delivery_commander_door.py  secoro_delivery_interface.py
ss-25-secoro-assignments-team-2-main/secoro_ws/src/turtlebot4/turtlebot4_description/: CHANGELOG.rst  package.xml
ss-25-secoro-assignments-team-2-main/secoro_ws/src/turtlebot4/turtlebot4_msgs/: package.xml
ss-25-secoro-assignments-team-2-main/secoro_ws/src/turtlebot4/turtlebot4_navigation/: package.xml
ss-25-secoro-assignments-team-2-main/secoro_ws/src/turtlebot4_simulator/: secoro_team_2.fpm2
ss-25-secoro-assignments-team-2-main/secoro_ws/src/turtlebot4_simulator/turtlebot4_gz_gui_plugins/: CHANGELOG.rst  package.xml
ss-25-secoro-assignments-team-2-main/secoro_ws/src/turtlebot4_simulator/turtlebot4_gz_gui_plugins/Turtlebot4Hmi/: Turtlebot4Hmi.cc  Turtlebot4Hmi.hh  Turtlebot4Hmi.qml
ss-25-secoro-assignments-team-2-main/secoro_ws/src/turtlebot4_simulator/turtlebot4_gz_toolbox/: CHANGELOG.rst  CMakeLists.txt  package.xml
ss-25-secoro-assignments-team-2-main/share_team2/src/: README.md
ss-25-secoro-assignments-team-2-main/share_team2/src/delivery_interface/: package.xml  setup.py
ss-25-secoro-assignments-team-2-main/share_team2/src/delivery_interface/delivery_interface/: delivery_commander.py
ss-25-secoro-assignments-team-2-main/share_team2/updated map and world files/: README.md
ss-25-secoro-assignments-team-2-main/share_team2/updated map and world files/world_models_secoro_team_2/3d-mesh/: secoro_team_2.stl
ss-25-secoro-assignments-team-2-main/share_team2/updated map and world files/world_models_secoro_team_2/tasks/: room_253_task.yaml  room_256_task.yaml  room_6_task.yaml
ss-25-secoro-assignments-team-2-main/worksheets/: installation_instructions.md  worksheet01.md  worksheet02.md  worksheet03.md  worksheet04.md
(+79 files in other folders)
