<?xml version="1.0"?>
<package format="3">
  <name>bt_ros2_demo</name>
  <version>0.1.0</version>
  <description>Behavior Tree task planner for package delivery using ROS 2 actions.</description>
  <maintainer email="kishansawant96@gmail.com">Kishan Sawant</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>behaviortree_cpp</depend>
  <depend>behaviortree_ros2</depend>
  <depend>nav2_msgs</depend>
  <depend>irobot_create_msgs</depend>
  <exec_depend>ament_index_cpp</exec_depend>

  <!-- Test dependencies, if you add tests later -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
