<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot4_gz_gui_plugins</name>
  <version>2.0.2</version>
  <description>Turtlebot4 Gazebo Simulator GUI Plugins</description>
  <maintainer email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</maintainer>
  <maintainer email="hluo@clearpathrobotics.com">Hilary Luo</maintainer>

  <license>Apache 2.0</license>

  <author email="rkreinin@clearpathrobotics.com">Roni Kreinin</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>gz_gui_vendor</depend>
  <depend>qml-module-qtquick-extras</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
